--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -7182,7 +7182,7 @@ html, body, #root, .app-layout, main, .homepage {
   padding: 10px;
   border-radius: 10px;
   border: 1px solid rgba(255,255,255,.12);
-  background:#e5e5e5;
+  background:#ffed00;
   cursor: pointer;
   transition: border-color .12s ease, background .12s ease;
 }
